--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        width: 500px;
+        width: 700px;
         height: 500px;
       }
       /* Optional: Makes the sample page fill the window. */
@@ -29,5 +29,6 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUNBQs9p7NIKwvKo1eFn8SNa7h4FQwro&callback=initMap">
     </script>
     <script src='map.js'></script>
+    <script src='directions-finder.js'></script>
   </body>
 </html>
