--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div id="container"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src='main.js'></script>
+    <script src='map.js'></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUNBQs9p7NIKwvKo1eFn8SNa7h4FQwro&callback=initMap">
     </script>
-    <script src='map.js'></script>
-    <script src='directions-finder.js'></script>
+    <!-- <script src='directions-finder.js'></script> -->
   </body>
 </html>
