--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        width: 700px;
-        height: 500px;
-      }
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
@@ -26,6 +20,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src='main.js'></script>
     <script src='map.js'></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUNBQs9p7NIKwvKo1eFn8SNa7h4FQwro&callback=initialize">
+  </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUNBQs9p7NIKwvKo1eFn8SNa7h4FQwro&callback=initMap">
     </script>
