--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <script src='main.js'></script>
     <script src='map.js'></script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUNBQs9p7NIKwvKo1eFn8SNa7h4FQwro&callback=initialize">
-    </script> 
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUNBQs9p7NIKwvKo1eFn8SNa7h4FQwro&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUNBQs9p7NIKwvKo1eFn8SNa7h4FQwro&callback=initMain">
     </script>
   </body>
 </html>
